[tool.poetry]
name = "hn-threadulator"
version = "0.1.0"
description = ""
authors = ["David Sere"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ujson = "^2.0.3"
requests = "^2.23.0"
torsimany = "^1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
yapf = "^0.30.0"
pylint = "^2.5.2"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
